raw field usage

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# lock files
+bun.lock
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
